# Nori-Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
include/nori/: accel.h  bitmap.h  block.h  bsdf.h  common.h  denoiser.h  emitter.h  medium.h  mesh.h  object.h  sampler.h  scene.h  texture.h  warp.h
results/homework-1/: report.html
results/homework-2/: ajax-normals-ordered.exr  ajax-normals-unordered.exr  report.html
results/homework-3/: ajax-ao.exr  ajax-simple.exr  report.html
results/homework-4/: cbox-distributed.exr  logo-dielectric.exr  logo-diffuse.exr  report.html  table_chair.exr
results/homework-4/hacker_points/: disk_area.exr  disk_ref.exr  disk_special.exr  rect_area.exr  rect_ref.exr  rect_special.exr  sphere_area.exr  sphere_ref.exr  sphere_special.exr
results/homework-5/: ajax-rough.exr  ajax-smooth.exr  report.html  table_ems.exr  table_mats.exr  table_mis.exr  veach_ems.exr  veach_mats.exr  veach_mis.exr
results/homework-5/hacker/hacker_rough_dielectric/: ajax-0.005.exr  ajax-0.02.exr  ajax-0.08.exr  ajax-0.18.exr
results/project/: report.html
results/project-proposal/: proposal.html
scenes/pa1/: bunny.exr
src/: accel.cpp  ao.cpp  bitmap.cpp  bm3d_denoiser.cpp  constant_texture.cpp  dielectric.cpp  emitter_disk.cpp  emitter_rect.cpp  emitter_whitted.cpp  image_texture.cpp  main.cpp  mesh.cpp  microfacet.cpp  microfacet_refraction.cpp  parser.cpp  path_ems.cpp  path_mats.cpp  path_mis.cpp  perspective.cpp  scene.cpp  simple.cpp  warptest.cpp  whitted.cpp
src/accelerator/: accel.cpp
src/camera/: thinlens.cpp
src/core/: block.cpp  common.cpp  parser.cpp  scene.cpp  warp.cpp
src/denoiser/: bm3d_denoiser.cpp
src/integrator/: path_ems.cpp  path_mis.cpp  vol_path.cpp
src/light/: area.cpp  emitter_sphere.cpp
src/main/: main.cpp
src/material/: conductor.cpp  dielectric.cpp  diffuse.cpp  microfacet.cpp  none.cpp  null.cpp  rough_dielectric.cpp
src/media/: homogeneous.cpp
src/texture/: constant_texture.cpp  image_texture.cpp
